# MAVLinkMCP

./: README.md  example_agent.py  fastagent.config.yaml  pyproject.toml
src/server/: mavlinkmcp.py
